[package]
name = "s3-cache"
version = "0.1.2"
edition = "2021"

authors = ["Greg Whiteley <greg.whiteley@gmail.com>"]
license = "GPL-3.0-or-later"

repository = "https://github.com/whitty/s3-cache"
readme = "README.md"

description = "Deduplicating temporary store for CI artifacts"
categories = ["command-line-utilities", "CI"]

exclude = [".jenkinsfile"]

[dependencies]
clap = { version = "4.5.8", features = ["wrap_help", "derive", "env"] }
rust-s3 = { version = "0.35.1", features = ["with-tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
async-std = { version = "1", features = ["attributes"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4.22"
anyhow = "1"
dotenvy = { version = "0.15.7" }
thiserror = "2.0.11"
sha2 = { version = "0.10.8", features = ["asm"] }
faster-hex = "0.10.0"
serde_json = "1.0.138"
serde = "1.0.217"
chrono = "0.4.39"

[profile.release]
# codegen units increase compile paralellism, but the optimiser sees
# less of the code together.
codegen-units = 1
# Abort on panic - reduces size, by removing exception stack unwinding
# panic = 'abort'
strip = true
lto = true
